# 20240729_python_project

./: .gitignore  LICENSE.txt  pyproject.toml
analysis/: 20240729_mix_effects.ipynb
src/mixeffects/: mixeffects.py
