[tool.poetry]
name = "mixeffect"
version = "0.1.0"
description = "Computes contribution of weights and values to the differences between two weighted kpis (m1 and m2)"
authors = ["Josep M (Pep) Porra <josepmporra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
numpy = "^2.0.1"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "mixeffects"
from = "src"